--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "knex": "^0.15.2",
+    "mysql": "^2.16.0",
     "restify": "^7.2.1",
     "restify-errors": "^6.1.1"
   }
